--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,14 @@
   <!-- Fuente Oswald -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  integrity="sha512-RXf+QSDCUQs6W1tC4QyV0Y3+fLMEc5TLyZmZKXqN9NVRtLaTY0E8oOybSbm5G+51aN3mkPj8G92g5pTs5o5Rdg=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
   <!-- Iconos Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
