--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap Icons (para el ícono de tarjeta) -->
+ 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-  integrity="sha512-RXf+QSDCUQs6W1tC4QyV0Y3+fLMEc5TLyZmZKXqN9NVRtLaTY0E8oOybSbm5G+51aN3mkPj8G92g5pTs5o5Rdg=="
+  integrity="sha512-y7eOa3+1uVp1b9DU7BPSaeXvK2ZP+DhzkCJc1T7g1eOEL6Y8FES+LFKrxhtdbulPK4vYWWCW2oWv5mVzXz8J1A=="
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
+
 
   <!-- Iconos Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
@@ -33,6 +35,7 @@
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <app-root></app-root>
